Allow map_replace substitution of network names
To allow per-node data such as bind_ip's to move into the
composable services templates, we do a value substitution
on the config settings hiera map, where e.g internal_api
will be replaced with the NetIpMap IP assigned to that.

To enable subnet/uri lookup via the same method, we add
all the subnet/uri mappings to the main net_ip_map output.

Change-Id: I7850d4dc8bf4db5f7ac6a6b53c1d900b561b4580

--- a/network/ports/net_ip_map.yaml
+++ b/network/ports/net_ip_map.yaml
@@ -82,6 +82,26 @@ outputs:
       storage_mgmt: {get_param: StorageMgmtIp}
       tenant: {get_param: TenantIp}
       management: {get_param: ManagementIp}
+      ctlplane_subnet:
+        list_join:
+          - ''
+          - - {get_param: ControlPlaneIp}
+            - '/'
+            - {get_param: ControlPlaneSubnetCidr}
+      external_subnet: {get_param: ExternalIpSubnet}
+      internal_api_subnet: {get_param: InternalApiIpSubnet}
+      storage_subnet: {get_param: StorageIpSubnet}
+      storage_mgmt_subnet: {get_param: StorageMgmtIpSubnet}
+      tenant_subnet: {get_param: TenantIpSubnet}
+      management_subnet: {get_param: ManagementIpSubnet}
+      ctlplane_uri: {get_param: ControlPlaneIp}
+      external_uri: {get_param: ExternalIpUri}
+      internal_api_uri: {get_param: InternalApiIpUri}
+      storage_uri: {get_param: StorageIpUri}
+      storage_mgmt_uri: {get_param: StorageMgmtIpUri}
+      tenant_uri: {get_param: TenantIpUri}
+      management_uri: {get_param: ManagementIpUri}
+  # net_ip_subnet_map is deprecated, please use *subnet from net_ip_map
   net_ip_subnet_map:
     description: >
       A Hash containing a mapping of network names to assigned IPs/CIDR
@@ -99,6 +119,7 @@ outputs:
       storage_mgmt: {get_param: StorageMgmtIpSubnet}
       tenant: {get_param: TenantIpSubnet}
       management: {get_param: ManagementIpSubnet}
+  # net_ip_uri_map is deprecated, please use *uri from net_ip_map
   net_ip_uri_map:
     description: >
       A Hash containing a mapping of network names to assigned IPs for a
