--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-10-15
+heat_template_version: 2016-10-14
 
 description: >
   OpenStack hypervisor node configured via Puppet.
@@ -382,7 +382,10 @@ resources:
               mapped_data:
                 service_names: {get_param: ServiceNames}
             service_configs:
-              mapped_data: {get_param: ServiceConfigSettings}
+              mapped_data:
+                map_replace:
+                  - {get_param: ServiceConfigSettings}
+                  - values: {get_attr: [NetIpMap, net_ip_map]}
             compute_extraconfig:
               mapped_data: {get_param: NovaComputeExtraConfig}
             extraconfig:
