Move mysql::host param from MysqlInternal to MysqlNoBracketsInternal
The ::host parameter expects IPv6 addresses withouth brackets; this
change aligns the remaining services to use MysqlNoBracketsInternal
as it happens already for the others (eg. Keystone).

Change-Id: Ia72d325447408b1cb5fea836034bbcd75d17ddf1

--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -57,7 +57,7 @@ outputs:
         cinder::rabbit_password: {get_param: RabbitPassword}
         cinder::rabbit_port: {get_param: RabbitClientPort}
         cinder::db::mysql::user: cinder
-        cinder::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+        cinder::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
         cinder::db::mysql::dbname: cinder
         cinder::db::mysql::allowed_hosts:
           - '%'
