--- a/puppet/services/neutron-server.yaml
+++ b/puppet/services/neutron-server.yaml
@@ -66,7 +66,7 @@ outputs:
             neutron::server::notifications::password: {get_param: NovaPassword}
             neutron::db::mysql::password: {get_param: NeutronPassword}
             neutron::db::mysql::user: neutron
-            neutron::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+            neutron::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
             neutron::db::mysql::dbname: ovs_neutron
             neutron::db::mysql::allowed_hosts:
               - '%'
