--- a/puppet/services/sahara-engine.yaml
+++ b/puppet/services/sahara-engine.yaml
@@ -38,7 +38,7 @@ outputs:
             sahara::database_connection: *sahara_dsn
             sahara::db::mysql::password: {get_param: SaharaPassword}
             sahara::db::mysql::user: sahara
-            sahara::db::mysql::host: {get_param: [EndpointMap, MysqlVirtual, host]}
+            sahara::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
             sahara::db::mysql::dbname: sahara
             sahara::db::mysql::allowed_hosts:
               - '%'
