--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -55,7 +55,7 @@ outputs:
             heat::db::mysql::password: {get_param: HeatPassword}
             heat::keystone::domain::domain_password: {get_param: HeatStackDomainAdminPassword}
             heat::db::mysql::user: heat
-            heat::db::mysql::host: {get_param: [EndpointMap, MysqlInternal, host]}
+            heat::db::mysql::host: {get_param: [EndpointMap, MysqlNoBracketsInternal, host]}
             heat::db::mysql::dbname: heat
             heat::db::mysql::allowed_hosts:
               - '%'
