Fixes type and description for NeutronL3HA
puppet-neutron takes this variable as boolean.  Although it doesn't
change the behavior in master (because the variable is used directly as
config), in mitaka it is used as a conditional and should be properly
fixed.

Also a fix is needed in python-tripleoclient because it is hard coded to
be True there based on number of controllers being greater than 1.
Therefore we shoudl remove that logic from tripleoclient and implement
it in THT.  In order to do that the pacemaker version of the variable is
defaulted to true.

Partial-Bug: 1605379

Change-Id: I0b797dbe188382e2dc32506913aaa60a0a21bd68
Signed-off-by: Tim Rozet <trozet@redhat.com>
(cherry picked from commit 8d0497d819a0f7e75eaae8531218ca7890d8ed7b)

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -449,9 +449,9 @@ parameters:
     description: Agent mode for the neutron-l3-agent on the controller hosts
     type: string
   NeutronL3HA:
-    default: 'False'
-    description: Whether to enable l3-agent HA
-    type: string
+    default: false
+    description: Whether to enable HA for virtual routers
+    type: boolean
   NeutronDhcpAgentsPerNetwork:
     type: number
     default: 3
