--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -255,9 +255,9 @@ parameters:
     description: Allow automatic l3-agent failover
     type: string
   NeutronL3HA:
-    default: 'False'
-    description: Whether to enable l3-agent HA
-    type: string
+    default: false
+    description: Whether to enable HA for virtual routers
+    type: boolean
   NeutronDhcpAgentsPerNetwork:
     type: number
     default: 1
