Remove deprecated net_ip_subnet_map output
Change-Id: I83ca923140d7f8ca3101e851e88ca3107a99555a

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -567,7 +567,14 @@ resources:
           str_replace:
             template: "['SUBNET']"
             params:
-              SUBNET: {get_attr: [NetIpMap, net_ip_subnet_map, {get_param: [ServiceNetMap, HorizonNetwork]}]}
+              SUBNET:
+                get_attr:
+                  - NetIpMap
+                  - net_ip_map
+                  - str_replace:
+                      template: "NETWORK_subnet"
+                      params:
+                        NETWORK: {get_param: [ServiceNetMap, HorizonNetwork]}
         rabbitmq_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, RabbitmqNetwork]}]}
         redis_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, RedisNetwork]}]}
         redis_vip: {get_param: RedisVirtualIP}
@@ -575,8 +582,22 @@ resources:
         memcached_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MemcachedNetwork]}]}
         mysql_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
         mysql_virtual_ip: {get_param: MysqlVirtualIP}
-        ceph_cluster_network: {get_attr: [NetIpMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephClusterNetwork]}]}
-        ceph_public_network: {get_attr: [NetIpMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephPublicNetwork]}]}
+        ceph_cluster_network:
+          get_attr:
+            - NetIpMap
+            - net_ip_map
+            - str_replace:
+                template: "NETWORK_subnet"
+                params:
+                  NETWORK: {get_param: [ServiceNetMap, CephClusterNetwork]}
+        ceph_public_network:
+          get_attr:
+            - NetIpMap
+            - net_ip_map
+            - str_replace:
+                template: "NETWORK_subnet"
+                params:
+                  NETWORK: {get_param: [ServiceNetMap, CephPublicNetwork]}
         ceph_public_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CephPublicNetwork]}]}
         ironic_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, IronicApiNetwork]}]}
 
@@ -630,7 +651,6 @@ resources:
             network:
               mapped_data:
                 net_ip_map: {get_attr: [NetIpMap, net_ip_map]}
-                net_ip_subnet_map: {get_attr: [NetIpMap, net_ip_subnet_map]}
                 net_ip_uri_map: {get_attr: [NetIpMap, net_ip_uri_map]}
             ceph:
               mapped_data:
