--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -236,8 +236,22 @@ resources:
       input_values:
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
-        ceph_cluster_network: {get_attr: [NetIpMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephClusterNetwork]}]}
-        ceph_public_network: {get_attr: [NetIpMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephPublicNetwork]}]}
+        ceph_cluster_network:
+          get_attr:
+            - NetIpMap
+            - net_ip_map
+            - str_replace:
+                template: "NETWORK_subnet"
+                params:
+                  NETWORK: {get_param: [ServiceNetMap, CephClusterNetwork]}
+        ceph_public_network:
+          get_attr:
+            - NetIpMap
+            - net_ip_map
+            - str_replace:
+                template: "NETWORK_subnet"
+                params:
+                  NETWORK: {get_param: [ServiceNetMap, CephPublicNetwork]}
 
   CephStorageConfig:
     type: OS::Heat::StructuredConfig
@@ -270,7 +284,6 @@ resources:
             network:
               mapped_data:
                 net_ip_map: {get_attr: [NetIpMap, net_ip_map]}
-                net_ip_subnet_map: {get_attr: [NetIpMap, net_ip_subnet_map]}
                 net_ip_uri_map: {get_attr: [NetIpMap, net_ip_uri_map]}
             ceph_extraconfig:
               mapped_data: {get_param: CephStorageExtraConfig}
