Set MDS/OSD firewall ports from ceph-osd template
Change-Id: Ie8d1678e6e32271ff31ea9dd7fcf7ef9e8956b86

--- a/puppet/services/ceph-mon.yaml
+++ b/puppet/services/ceph-mon.yaml
@@ -54,9 +54,8 @@ outputs:
               - {get_param: GlanceRbdPoolName}
               - {get_param: GnocchiRbdPoolName}
             tripleo.ceph_mon.firewall_rules:
-              '110 ceph':
+              '110 ceph_mon':
                 dport:
                   - 6789
-                  - '6800-6810'
       step_config: |
         include ::tripleo::profile::base::ceph::mon
