--- a/puppet/services/ceph-osd.yaml
+++ b/puppet/services/ceph-osd.yaml
@@ -20,6 +20,11 @@ outputs:
     value:
       service_name: ceph-osd
       config_settings:
-        get_attr: [CephBase, role_data, config_settings]
+        map_merge:
+          - get_attr: [CephBase, role_data, config_settings]
+          - tripleo.ceph_osd.firewall_rules:
+              '111 ceph_osd':
+                dport:
+                  - '6800-7300'
       step_config: |
         include ::tripleo::profile::base::ceph::osd
