Add default value for `RoleData`
This just adds a default value for `RoleData` in
docker/compute-post.yaml

Change-Id: I96a01dc22e03980b93b32f0f9990f35b83ecfb24

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -42,6 +42,9 @@ parameters:
     type: string
     description: Config manifests that will be used to step through the deployment.
     default: ''
+  RoleData:
+    type: json
+    default: {}
 
 
 resources:
