--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -205,7 +205,7 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
-  SchedulerHints:
+  NovaComputeSchedulerHints:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
@@ -244,7 +244,7 @@ resources:
             params: {get_param: HostnameMap}
       software_config_transport: {get_param: SoftwareConfigTransport}
       metadata: {get_param: ServerMetadata}
-      scheduler_hints: {get_param: SchedulerHints}
+      scheduler_hints: {get_param: NovaComputeSchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
