--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -86,7 +86,7 @@ parameters:
       Extra properties or metadata passed to Nova for the created nodes in
       the overcloud. It's accessible via the Nova metadata API.
     type: json
-  SchedulerHints:
+  ObjectStorageSchedulerHints:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
@@ -125,7 +125,7 @@ resources:
             params: {get_param: HostnameMap}
       software_config_transport: {get_param: SoftwareConfigTransport}
       metadata: {get_param: ServerMetadata}
-      scheduler_hints: {get_param: SchedulerHints}
+      scheduler_hints: {get_param: ObjectStorageSchedulerHints}
 
   # Combine the NodeAdminUserData and NodeUserData mime archives
   UserData:
