Move *Image parameters into role templates
We've got some inconsistent naming here, but I'm not attempting to
fix that yet, only move the current parameters inside each role template.

This should be backwards compatible because the parameter names
don't change, but also enable progress on custom-roles.  We can
figure out a strategy for deprecating these and aligning per-role
parameter naming in a subsequent patch.

Also moves ImageUpdatePolicy, which wasn't consistently passed to
all roles anyway, and aligns the default image and constraints
for each role.

Change-Id: I85ec979934df220acbab9f7c3a6055f23e3bfc29
Partially-Implements: blueprint custom-roles

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -6,9 +6,9 @@ parameters:
     type: string
     constraints:
       - custom_constraint: nova.flavor
-  Image:
+  CephStorageImage:
     type: string
-    default: overcloud-ceph-storage
+    default: overcloud-full
     constraints:
       - custom_constraint: glance.image
   ImageUpdatePolicy:
@@ -106,7 +106,7 @@ resources:
       os-collect-config:
         command: {get_param: ConfigCommand}
     properties:
-      image: {get_param: Image}
+      image: {get_param: CephStorageImage}
       image_update_policy: {get_param: ImageUpdatePolicy}
       flavor: {get_param: Flavor}
       key_name: {get_param: KeyName}
