--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -1,9 +1,11 @@
 heat_template_version: 2015-04-30
 description: 'OpenStack cinder storage configured by Puppet'
 parameters:
-  Image:
-    default: overcloud-cinder-volume
+  BlockStorageImage:
+    default: overcloud-full
     type: string
+    constraints:
+      - custom_constraint: glance.image
   ExtraConfig:
     default: {}
     description: |
@@ -107,7 +109,7 @@ resources:
         command: {get_param: ConfigCommand}
     properties:
       image:
-        {get_param: Image}
+        {get_param: BlockStorageImage}
       flavor: {get_param: Flavor}
       key_name: {get_param: KeyName}
       networks:
