--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -48,9 +48,9 @@ parameters:
   GlanceHost:
     type: string
     default: ''  # Has to be here because of the ignored empty value bug
-  Image:
+  NovaImage:
     type: string
-    default: overcloud-compute
+    default: overcloud-full
     constraints:
       - custom_constraint: glance.image
   ImageUpdatePolicy:
@@ -228,8 +228,7 @@ resources:
       os-collect-config:
         command: {get_param: ConfigCommand}
     properties:
-      image:
-        {get_param: Image}
+      image: {get_param: NovaImage}
       image_update_policy:
         get_param: ImageUpdatePolicy
       flavor: {get_param: Flavor}
