--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -117,9 +117,9 @@ parameters:
     description: Secret key for Django
     type: string
     hidden: true
-  Image:
+  controllerImage:
     type: string
-    default: overcloud-control
+    default: overcloud-full
     constraints:
       - custom_constraint: glance.image
   ImageUpdatePolicy:
@@ -340,7 +340,7 @@ resources:
       os-collect-config:
         command: {get_param: ConfigCommand}
     properties:
-      image: {get_param: Image}
+      image: {get_param: controllerImage}
       image_update_policy: {get_param: ImageUpdatePolicy}
       flavor: {get_param: Flavor}
       key_name: {get_param: KeyName}
