--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -11,9 +11,11 @@ parameters:
       in the ring.
     hidden: true
     type: string
-  Image:
-    default: overcloud-swift-storage
+  SwiftStorageImage:
+    default: overcloud-full
     type: string
+    constraints:
+      - custom_constraint: glance.image
   KeyName:
     default: default
     description: Name of an existing Nova key pair to enable SSH access to the instances
@@ -112,7 +114,7 @@ resources:
       os-collect-config:
         command: {get_param: ConfigCommand}
     properties:
-      image: {get_param: Image}
+      image: {get_param: SwiftStorageImage}
       flavor: {get_param: Flavor}
       key_name: {get_param: KeyName}
       networks:
