Move *Flavor parameters into per-role templates
We have some inconsistent naming here, but move them with their
current names for backwards compatibility, we can address the
deprecation of the inconsistent names at a future time.

This is required to enable jinja templating of roles in overcloud.yaml

Change-Id: I2ea673d9bc52967f9b7c25555059b964abf66966
Partially-Implements: blueprint custom-roles

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -1,8 +1,9 @@
 heat_template_version: 2015-04-30
 description: 'OpenStack ceph storage node configured by Puppet'
 parameters:
-  Flavor:
+  OvercloudCephStorageFlavor:
     description: Flavor for the Ceph Storage node.
+    default: baremetal
     type: string
     constraints:
       - custom_constraint: nova.flavor
@@ -108,7 +109,7 @@ resources:
     properties:
       image: {get_param: CephStorageImage}
       image_update_policy: {get_param: ImageUpdatePolicy}
-      flavor: {get_param: Flavor}
+      flavor: {get_param: OvercloudCephStorageFlavor}
       key_name: {get_param: KeyName}
       networks:
         - network: ctlplane
