--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -20,9 +20,10 @@ parameters:
   BlockStorageIPs:
     default: {}
     type: json
-  Flavor:
+  OvercloudBlockStorageFlavor:
     description: Flavor for block storage nodes to request when deploying.
     type: string
+    default: baremetal
     constraints:
       - custom_constraint: nova.flavor
   KeyName:
