--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -40,8 +40,9 @@ parameters:
       Additional hiera configuration to inject into the cluster. Note
       that NovaComputeExtraConfig takes precedence over ExtraConfig.
     type: json
-  Flavor:
+  OvercloudComputeFlavor:
     description: Flavor for the nova compute node
+    default: baremetal
     type: string
     constraints:
       - custom_constraint: nova.flavor
@@ -231,7 +232,7 @@ resources:
       image: {get_param: NovaImage}
       image_update_policy:
         get_param: ImageUpdatePolicy
-      flavor: {get_param: Flavor}
+      flavor: {get_param: OvercloudComputeFlavor}
       key_name: {get_param: KeyName}
       networks:
         - network: ctlplane
