--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -93,8 +93,9 @@ parameters:
           ]
         }
     type: json
-  Flavor:
+  OvercloudControlFlavor:
     description: Flavor for control nodes to request when deploying.
+    default: baremetal
     type: string
     constraints:
       - custom_constraint: nova.flavor
@@ -342,7 +343,7 @@ resources:
     properties:
       image: {get_param: controllerImage}
       image_update_policy: {get_param: ImageUpdatePolicy}
-      flavor: {get_param: Flavor}
+      flavor: {get_param: OvercloudControlFlavor}
       key_name: {get_param: KeyName}
       networks:
         - network: ctlplane
