--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -1,8 +1,9 @@
 heat_template_version: 2015-04-30
 description: 'OpenStack swift storage node configured by Puppet'
 parameters:
-  Flavor:
+  OvercloudSwiftStorageFlavor:
     description: Flavor for Swift storage nodes to request when deploying.
+    default: baremetal
     type: string
     constraints:
       - custom_constraint: nova.flavor
@@ -115,7 +116,7 @@ resources:
         command: {get_param: ConfigCommand}
     properties:
       image: {get_param: SwiftStorageImage}
-      flavor: {get_param: Flavor}
+      flavor: {get_param: OvercloudSwiftStorageFlavor}
       key_name: {get_param: KeyName}
       networks:
         - network: ctlplane
