Create role for the fake openstack-core resource
Change-Id: Iacd94294b8a66bc082bb2b3e8d3364ec1bf053b8
Depends-On: I16a786ce167c57848551c7245f4344c382c55b3d

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -12,6 +12,7 @@ resource_registry:
   OS::TripleO::Services::CinderApi: ../puppet/services/pacemaker/cinder-api.yaml
   OS::TripleO::Services::CinderScheduler: ../puppet/services/pacemaker/cinder-scheduler.yaml
   OS::TripleO::Services::CinderVolume: ../puppet/services/pacemaker/cinder-volume.yaml
+  OS::TripleO::Services::Core: ../puppet/services/pacemaker/core.yaml
   OS::TripleO::Services::Keystone: ../puppet/services/pacemaker/keystone.yaml
   OS::TripleO::Services::GlanceApi: ../puppet/services/pacemaker/glance-api.yaml
   OS::TripleO::Services::GlanceRegistry: ../puppet/services/pacemaker/glance-registry.yaml
