--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -359,6 +359,7 @@ parameters:
       - OS::TripleO::Services::CinderApi
       - OS::TripleO::Services::CinderScheduler
       - OS::TripleO::Services::CinderVolume
+      - OS::TripleO::Services::Core
       - OS::TripleO::Services::Kernel
       - OS::TripleO::Services::Keystone
       - OS::TripleO::Services::GlanceApi
