--- a/puppet/services/services.yaml
+++ b/puppet/services/services.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2016-04-08
+heat_template_version: 2016-10-14
 
 description: >
   Utility stack to convert an array of services into a set of combined
@@ -30,6 +30,11 @@ outputs:
   role_data:
     description: Combined Role data for this set of services.
     value:
-      service_names: {get_attr: [ServiceChain, role_data, service_name]}
+      service_names:
+        # Filter any null/None service_names which may be present due to mapping
+        # of services to OS::Heat::None
+        yaql:
+          expression: list($.data.s_names.where($ != null))
+          data: {s_names: {get_attr: [ServiceChain, role_data, service_name]}}
       config_settings: {map_merge: {get_attr: [ServiceChain, role_data, config_settings]}}
       step_config: {list_join: ["\n", {get_attr: [ServiceChain, role_data, step_config]}]}
