Convert service_name to underscore syntax
Currently we use hyphens, e.g cinder-api, but in overcloud.yaml
we have a lot of references to services (e.g for AllNodesConfig)
by underscore, e.g cinder_api.  To enable dynamic generation of
this data, we need the service name in underscore format.

Change-Id: Ief13dfe5d8d7691dfe2534ad5c39d7eacbcb6f70

--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Ceilometer API role.
     value:
-      service_name: ceilometer-api
+      service_name: ceilometer_api
       config_settings:
         map_merge:
           - get_attr: [CeilometerServiceBase, role_data, config_settings]
