--- a/puppet/services/ceilometer-base.yaml
+++ b/puppet/services/ceilometer-base.yaml
@@ -62,7 +62,7 @@ outputs:
   role_data:
     description: Role data for the Ceilometer role.
     value:
-      service_name: ceilometer-base
+      service_name: ceilometer_base
       config_settings:
         ceilometer::db::database_connection:
           list_join:
