--- a/puppet/services/ceilometer-collector.yaml
+++ b/puppet/services/ceilometer-collector.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Ceilometer Collector role.
     value:
-      service_name: ceilometer-collector
+      service_name: ceilometer_collector
       config_settings:
         get_attr: [CeilometerServiceBase, role_data, config_settings]
       step_config: |
