--- a/puppet/services/ceilometer-expirer.yaml
+++ b/puppet/services/ceilometer-expirer.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Ceilometer Expirer role.
     value:
-      service_name: ceilometer-expirer
+      service_name: ceilometer_expirer
       config_settings:
         get_attr: [CeilometerServiceBase, role_data, config_settings]
       step_config: |
