--- a/puppet/services/ceph-client.yaml
+++ b/puppet/services/ceph-client.yaml
@@ -18,7 +18,7 @@ outputs:
   role_data:
     description: Role data for the Cinder OSD service.
     value:
-      service_name: ceph-client
+      service_name: ceph_client
       config_settings:
         get_attr: [CephBase, role_data, config_settings]
       step_config: |
