--- a/puppet/services/ceph-mon.yaml
+++ b/puppet/services/ceph-mon.yaml
@@ -41,7 +41,7 @@ outputs:
   role_data:
     description: Role data for the Ceph Monitor service.
     value:
-      service_name: ceph-mon
+      service_name: ceph_mon
       config_settings:
         map_merge:
           - get_attr: [CephBase, role_data, config_settings]
