--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -30,7 +30,7 @@ outputs:
   role_data:
     description: Role data for the Cinder API role.
     value:
-      service_name: cinder-api
+      service_name: cinder_api
       config_settings:
         map_merge:
           - get_attr: [CinderBase, role_data, config_settings]
