--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -40,7 +40,7 @@ outputs:
   role_data:
     description: Role data for the Cinder base service.
     value:
-      service_name: cinder-base
+      service_name: cinder_base
       config_settings:
         cinder::database_connection:
           list_join:
