--- a/puppet/services/database/mongodb-base.yaml
+++ b/puppet/services/database/mongodb-base.yaml
@@ -24,7 +24,7 @@ outputs:
   role_data:
     description: Role data for the MongoDB base service.
     value:
-      service_name: mongodb-base
+      service_name: mongodb_base
       config_settings:
         mongodb::server::nojournal: {get_param: MongoDbNoJournal}
         mongodb::server::ipv6: {get_param: MongoDbIPv6}
