--- a/puppet/services/database/redis-base.yaml
+++ b/puppet/services/database/redis-base.yaml
@@ -13,7 +13,7 @@ outputs:
   role_data:
     description: Role data for the redis role.
     value:
-      service_name: redis-base
+      service_name: redis_base
       config_settings:
        redis::requirepass: {get_param: RedisPassword}
        redis::masterauth: {get_param: RedisPassword}
