--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -65,7 +65,7 @@ outputs:
   role_data:
     description: Role data for the Glance API role.
     value:
-      service_name: glance-api
+      service_name: glance_api
       config_settings:
         glance::api::database_connection:
           list_join:
