--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -26,7 +26,7 @@ outputs:
   role_data:
     description: Role data for the Glance Registry role.
     value:
-      service_name: glance-registry
+      service_name: glance_registry
       config_settings:
         glance::registry::database_connection:
           list_join:
