--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -31,7 +31,7 @@ outputs:
   role_data:
     description: Shared role data for the Heat services.
     value:
-      service_name: heat-base
+      service_name: heat_base
       config_settings:
         heat::rabbit_userid: {get_param: RabbitUserName}
         heat::rabbit_password: {get_param: RabbitPassword}
