--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -35,7 +35,7 @@ outputs:
   role_data:
     description: Role data for the Heat Engine role.
     value:
-      service_name: heat-engine
+      service_name: heat_engine
       config_settings:
         map_merge:
           - get_attr: [HeatBase, role_data, config_settings]
