--- a/puppet/services/ironic-api.yaml
+++ b/puppet/services/ironic-api.yaml
@@ -24,7 +24,7 @@ outputs:
   role_data:
     description: Role data for the Ironic API role.
     value:
-      service_name: ironic-api
+      service_name: ironic_api
       config_settings:
         map_merge:
           - get_attr: [IronicBase, role_data, config_settings]
