--- a/puppet/services/ironic-base.yaml
+++ b/puppet/services/ironic-base.yaml
@@ -40,7 +40,7 @@ outputs:
   role_data:
     description: Role data for the Ironic role.
     value:
-      service_name: ironic-base
+      service_name: ironic_base
       config_settings:
         ironic::database_connection:
           list_join:
