--- a/puppet/services/neutron-base.yaml
+++ b/puppet/services/neutron-base.yaml
@@ -47,7 +47,7 @@ outputs:
   role_data:
     description: Role data for the Neutron base service.
     value:
-      service_name: neutron-base
+      service_name: neutron_base
       config_settings:
         neutron::rabbit_password: {get_param: RabbitPassword}
         neutron::rabbit_user: {get_param: RabbitUserName}
