--- a/puppet/services/neutron-l3.yaml
+++ b/puppet/services/neutron-l3.yaml
@@ -26,7 +26,7 @@ outputs:
   role_data:
     description: Role data for the Neutron L3 agent service.
     value:
-      service_name: neutron-l3
+      service_name: neutron_l3
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
