--- a/puppet/services/neutron-metadata.yaml
+++ b/puppet/services/neutron-metadata.yaml
@@ -31,7 +31,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Metadata agent service.
     value:
-      service_name: neutron-metadata
+      service_name: neutron_metadata
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
