--- a/puppet/services/neutron-ovs-agent.yaml
+++ b/puppet/services/neutron-ovs-agent.yaml
@@ -47,7 +47,7 @@ outputs:
   role_data:
     description: Role data for the Neutron OVS agent service.
     value:
-      service_name: neutron-ovs-agent
+      service_name: neutron_ovs_agent
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
