--- a/puppet/services/neutron-plugin-plumgrid.yaml
+++ b/puppet/services/neutron-plugin-plumgrid.yaml
@@ -80,7 +80,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Plumgrid plugin
     value:
-      service_name: neutron-plugin-plumgrid
+      service_name: neutron_plugin_plumgrid
       config_settings:
         neutron::plugins::plumgrid::connection:
           list_join:
