--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -40,7 +40,7 @@ outputs:
   role_data:
     description: Role data for the Nova base service.
     value:
-      service_name: nova-base
+      service_name: nova_base
       config_settings:
         nova::rabbit_password: {get_param: RabbitPassword}
         nova::rabbit_user: {get_param: RabbitUserName}
