--- a/puppet/services/nova-consoleauth.yaml
+++ b/puppet/services/nova-consoleauth.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Nova Consoleauth service.
     value:
-      service_name: nova-consoleauth
+      service_name: nova_consoleauth
       config_settings:
         get_attr: [NovaBase, role_data, config_settings]
       step_config: |
