--- a/puppet/services/pacemaker/cinder-scheduler.yaml
+++ b/puppet/services/pacemaker/cinder-scheduler.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Cinder Scheduler role.
     value:
-      service_name: cinder-scheduler
+      service_name: cinder_scheduler
       config_settings:
         map_merge:
           - get_attr: [CinderSchedulerBase, role_data, config_settings]
