--- a/puppet/services/pacemaker/glance-api.yaml
+++ b/puppet/services/pacemaker/glance-api.yaml
@@ -45,7 +45,7 @@ outputs:
   role_data:
     description: Role data for the Glance role.
     value:
-      service_name: glance-api
+      service_name: glance_api
       config_settings:
         map_merge:
           - get_attr: [GlanceApiBase, role_data, config_settings]
