--- a/puppet/services/pacemaker/heat-api-cloudwatch.yaml
+++ b/puppet/services/pacemaker/heat-api-cloudwatch.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Heat Cloudwatch API role.
     value:
-      service_name: heat-api-cloudwatch
+      service_name: heat_api_cloudwatch
       config_settings:
         map_merge:
            - get_attr: [HeatApiCloudwatchBase, role_data, config_settings]
