--- a/puppet/services/pacemaker/neutron-dhcp.yaml
+++ b/puppet/services/pacemaker/neutron-dhcp.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Neutron DHCP role.
     value:
-      service_name: neutron-dhcp
+      service_name: neutron_dhcp
       config_settings:
         map_merge:
           - get_attr: [NeutronDhcpBase, role_data, config_settings]
