--- a/puppet/services/pacemaker/nova-conductor.yaml
+++ b/puppet/services/pacemaker/nova-conductor.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Nova Conductor role.
     value:
-      service_name: nova-conductor
+      service_name: nova_conductor
       config_settings:
         map_merge:
           - get_attr: [NovaConductorBase, role_data, config_settings]
