--- a/puppet/services/pacemaker/nova-consoleauth.yaml
+++ b/puppet/services/pacemaker/nova-consoleauth.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Nova Consoleauth role.
     value:
-      service_name: nova-consoleauth
+      service_name: nova_consoleauth
       config_settings:
         map_merge:
           - get_attr: [NovaConsoleauthBase, role_data, config_settings]
