--- a/puppet/services/pacemaker/nova-vncproxy.yaml
+++ b/puppet/services/pacemaker/nova-vncproxy.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Nova Vncproxy role.
     value:
-      service_name: nova-vncproxy
+      service_name: nova_vncproxy
       config_settings:
         map_merge:
           - get_attr: [NovaVncproxyBase, role_data, config_settings]
