--- a/puppet/services/pacemaker/sahara-engine.yaml
+++ b/puppet/services/pacemaker/sahara-engine.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Sahara Engine role.
     value:
-      service_name: sahara-engine
+      service_name: sahara_engine
       config_settings:
         map_merge:
           - get_attr: [SaharaEngineBase, role_data, config_settings]
