--- a/puppet/services/sahara-base.yaml
+++ b/puppet/services/sahara-base.yaml
@@ -31,7 +31,7 @@ outputs:
   role_data:
     description: Role data for the Sahara base service.
     value:
-      service_name: sahara-base
+      service_name: sahara_base
       config_settings:
         sahara::rabbit_password: {get_param: RabbitPassword}
         sahara::rabbit_user: {get_param: RabbitUserName}
