--- a/puppet/services/swift-ringbuilder.yaml
+++ b/puppet/services/swift-ringbuilder.yaml
@@ -30,7 +30,7 @@ outputs:
   role_data:
     description: Role data for Swift Ringbuilder configuration.
     value:
-      service_name: swift-ringbuilder
+      service_name: swift_ringbuilder
       config_settings:
         tripleo::profile::base::swift::ringbuilder::build_ring: {get_param: SwiftRingBuild}
         tripleo::profile::base::swift::ringbuilder::replicas: {get_param: SwiftReplicas}
