--- a/puppet/services/swift-storage.yaml
+++ b/puppet/services/swift-storage.yaml
@@ -36,7 +36,7 @@ outputs:
   role_data:
     description: Role data for the Swift Proxy role.
     value:
-      service_name: swift-storage
+      service_name: swift_storage
       config_settings:
         # Swift
         swift::storage::all::mount_check: {get_param: SwiftMountCheck}
