--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -57,7 +57,7 @@ outputs:
   role_data:
     description: Role data for the Ceph base service.
     value:
-      service_name: ceph-base
+      service_name: ceph_base
       config_settings:
         tripleo::profile::base::ceph::ceph_ipv6: {get_param: CephIPv6}
         tripleo::profile::base::ceph::enable_ceph_storage: {get_param: ControllerEnableCephStorage}
