--- a/puppet/services/ceph-osd.yaml
+++ b/puppet/services/ceph-osd.yaml
@@ -18,7 +18,7 @@ outputs:
   role_data:
     description: Role data for the Cinder OSD service.
     value:
-      service_name: ceph-osd
+      service_name: ceph_osd
       config_settings:
         map_merge:
           - get_attr: [CephBase, role_data, config_settings]
