--- a/puppet/services/heat-api-cfn.yaml
+++ b/puppet/services/heat-api-cfn.yaml
@@ -30,7 +30,7 @@ outputs:
   role_data:
     description: Role data for the Heat CloudFormation API role.
     value:
-      service_name: heat-api-cfn
+      service_name: heat_api_cfn
       config_settings:
         map_merge:
           - get_attr: [HeatBase, role_data, config_settings]
