--- a/puppet/services/ironic-conductor.yaml
+++ b/puppet/services/ironic-conductor.yaml
@@ -24,7 +24,7 @@ outputs:
   role_data:
     description: Role data for the Ironic conductor role.
     value:
-      service_name: ironic-conductor
+      service_name: ironic_conductor
       config_settings:
         map_merge:
           - get_attr: [IronicBase, role_data, config_settings]
