--- a/puppet/services/neutron-dhcp.yaml
+++ b/puppet/services/neutron-dhcp.yaml
@@ -23,7 +23,7 @@ outputs:
   role_data:
     description: Role data for the Neutron DHCP agent service.
     value:
-      service_name: neutron-dhcp
+      service_name: neutron_dhcp
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
