--- a/puppet/services/neutron-plugin-nuage.yaml
+++ b/puppet/services/neutron-plugin-nuage.yaml
@@ -59,7 +59,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Nuage plugin
     value:
-      service_name: neutron-plugin-nuage
+      service_name: neutron_plugin_nuage
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
