--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -24,7 +24,7 @@ outputs:
   role_data:
     description: Role data for the Nova API service.
     value:
-      service_name: nova-api
+      service_name: nova_api
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
