--- a/puppet/services/nova-compute.yaml
+++ b/puppet/services/nova-compute.yaml
@@ -26,7 +26,7 @@ outputs:
   role_data:
     description: Role data for the Nova Compute service.
     value:
-      service_name: nova-compute
+      service_name: nova_compute
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
