--- a/puppet/services/nova-conductor.yaml
+++ b/puppet/services/nova-conductor.yaml
@@ -24,7 +24,7 @@ outputs:
   role_data:
     description: Role data for the Nova Conductor service.
     value:
-      service_name: nova-conductor
+      service_name: nova_conductor
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
