--- a/puppet/services/nova-libvirt.yaml
+++ b/puppet/services/nova-libvirt.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Libvirt service.
     value:
-      service_name: nova-libvirt
+      service_name: nova_libvirt
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
