--- a/puppet/services/nova-scheduler.yaml
+++ b/puppet/services/nova-scheduler.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Nova Scheduler service.
     value:
-      service_name: nova-scheduler
+      service_name: nova_scheduler
       config_settings:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
