--- a/puppet/services/pacemaker/ceilometer-collector.yaml
+++ b/puppet/services/pacemaker/ceilometer-collector.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Ceilometer Collector pacemaker role.
     value:
-      service_name: ceilometer-collector
+      service_name: ceilometer_collector
       config_settings:
         map_merge:
           - get_attr: [CeilometerServiceBase, role_data, config_settings]
