--- a/puppet/services/pacemaker/cinder-api.yaml
+++ b/puppet/services/pacemaker/cinder-api.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Cinder API role.
     value:
-      service_name: cinder-api
+      service_name: cinder_api
       config_settings:
         map_merge:
           - get_attr: [CinderApiBase, role_data, config_settings]
