--- a/puppet/services/pacemaker/cinder-volume.yaml
+++ b/puppet/services/pacemaker/cinder-volume.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Cinder Volume role.
     value:
-      service_name: cinder-volume
+      service_name: cinder_volume
       config_settings:
         map_merge:
           - get_attr: [CinderVolumeBase, role_data, config_settings]
