--- a/puppet/services/pacemaker/gnocchi-api.yaml
+++ b/puppet/services/pacemaker/gnocchi-api.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Gnocchi role.
     value:
-      service_name: gnocchi-api
+      service_name: gnocchi_api
       config_settings:
         map_merge:
           - get_attr: [GnocchiServiceBase, role_data, config_settings]
