--- a/puppet/services/pacemaker/heat-api-cfn.yaml
+++ b/puppet/services/pacemaker/heat-api-cfn.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Heat CloudFormation API role.
     value:
-      service_name: heat-api-cfn
+      service_name: heat_api_cfn
       config_settings:
         map_merge:
           - get_attr: [HeatApiCfnBase, role_data, config_settings]
