--- a/puppet/services/pacemaker/heat-api.yaml
+++ b/puppet/services/pacemaker/heat-api.yaml
@@ -20,7 +20,7 @@ outputs:
   role_data:
     description: Role data for the Heat API role.
     value:
-      service_name: heat-api
+      service_name: heat_api
       config_settings:
         map_merge:
           - get_attr: [HeatApiBase, role_data, config_settings]
