--- a/puppet/services/pacemaker/heat-engine.yaml
+++ b/puppet/services/pacemaker/heat-engine.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Heat engine role.
     value:
-      service_name: heat-engine
+      service_name: heat_engine
       config_settings:
         map_merge:
           - get_attr: [HeatEngineBase, role_data, config_settings]
