--- a/puppet/services/pacemaker/neutron-metadata.yaml
+++ b/puppet/services/pacemaker/neutron-metadata.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Metadata role.
     value:
-      service_name: neutron-metadata
+      service_name: neutron_metadata
       config_settings:
         map_merge:
           - get_attr: [NeutronMetadataBase, role_data, config_settings]
