--- a/puppet/services/pacemaker/neutron-midonet.yaml
+++ b/puppet/services/pacemaker/neutron-midonet.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Midonet plugin.
     value:
-      service_name: neutron-midonet
+      service_name: neutron_midonet
       config_settings:
         map_merge:
           - get_attr: [NeutronMidonetBase, role_data, config_settings]
