--- a/puppet/services/pacemaker/neutron-plugin-ml2.yaml
+++ b/puppet/services/pacemaker/neutron-plugin-ml2.yaml
@@ -19,7 +19,7 @@ outputs:
   role_data:
     description: Role data for the Neutron ML2 plugin.
     value:
-      service_name: neutron-plugin-ml2
+      service_name: neutron_plugin_ml2
       config_settings:
         map_merge:
           - get_attr: [NeutronMl2Base, role_data, config_settings]
