--- a/puppet/services/pacemaker/neutron-server.yaml
+++ b/puppet/services/pacemaker/neutron-server.yaml
@@ -25,7 +25,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Server.
     value:
-      service_name: neutron-server
+      service_name: neutron_server
       config_settings:
         map_merge:
           - get_attr: [NeutronServerBase, role_data, config_settings]
