--- a/puppet/services/pacemaker/nova-api.yaml
+++ b/puppet/services/pacemaker/nova-api.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Nova API role.
     value:
-      service_name: nova-api
+      service_name: nova_api
       config_settings:
         map_merge:
           - get_attr: [NovaApiBase, role_data, config_settings]
