--- a/puppet/services/pacemaker/nova-scheduler.yaml
+++ b/puppet/services/pacemaker/nova-scheduler.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Nova Scheduler role.
     value:
-      service_name: nova-scheduler
+      service_name: nova_scheduler
       config_settings:
         map_merge:
           - get_attr: [NovaSchedulerBase, role_data, config_settings]
