--- a/puppet/services/pacemaker/sahara-api.yaml
+++ b/puppet/services/pacemaker/sahara-api.yaml
@@ -21,7 +21,7 @@ outputs:
   role_data:
     description: Role data for the Sahara API role.
     value:
-      service_name: sahara-api
+      service_name: sahara_api
       config_settings:
         map_merge:
           - get_attr: [SaharaApiBase, role_data, config_settings]
