--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -35,7 +35,7 @@ outputs:
   role_data:
     description: Role data for the Swift proxy service.
     value:
-      service_name: swift-proxy
+      service_name: swift_proxy
       config_settings:
         # Swift
         swift::proxy::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
