Add EnabledServices output to overcloud.yaml
This is essentially the same data as defined in the *Services parameter,
but it shows what's enabled for all roles in the format output from the
service templates, so is useful for debugging, and possibly for things
like conditional endpoint generation in future.

Change-Id: Ia4b1694e419533b05d2757d2925471cae75fb5b6

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1306,3 +1306,11 @@ outputs:
       hostname-based access to the deployed nodes (useful for testing without
       setting up a DNS).
     value: {get_attr: [allNodesConfig, hosts_entries]}
+  EnabledServices:
+    description: The services enabled on each role
+    value:
+      Controller: {get_attr: [ControllerServiceChain, role_data, service_names]}
+      Compute: {get_attr: [ComputeServiceChain, role_data, service_names]}
+      BlockStorage: {get_attr: [BlockStorageServiceChain, role_data, service_names]}
+      ObjectStorage: {get_attr: [ObjectStorageServiceChain, role_data, service_names]}
+      CephStorage: {get_attr: [CephStorageServiceChain, role_data, service_names]}
