move hieradata/ceph into ceph-base service
Part of composable roles work, move hieradata/ceph into the ceph-base
profile directly.
Also add a comment in all hieradata files to stop adding more data and
use composable services.

Change-Id: I97cc22a253b547be6b99312b6072f53b428aae2c

--- a/puppet/hieradata/ceph.yaml
+++ b/puppet/hieradata/ceph.yaml
@@ -1,9 +1,2 @@
-ceph::profile::params::osd_pool_default_pg_num: 32
-ceph::profile::params::osd_pool_default_pgp_num: 32
-ceph::profile::params::osd_pool_default_size: 3
-ceph::profile::params::osd_pool_default_min_size: 1
-ceph::profile::params::osds: {/srv/data: {}}
-ceph::profile::params::manage_repo: false
-ceph::profile::params::authentication_type: cephx
-
+# Do not add hieradata in this file, and use composable services.
 ceph_classes: []
