--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -1,3 +1,5 @@
+# Do not add hieradata in this file, and use composable services.
+
 # TODO(emilien) move it to composable aodh roles later
 aodh::auth::auth_region: 'regionOne'
 aodh::auth::auth_tenant_name: 'service'
