--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -1,3 +1,3 @@
-# Hiera data here applies to all compute nodes
+# Do not add hieradata in this file, and use composable services.
 
 compute_classes: []
