--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -1,4 +1,4 @@
-# Hiera data here applies to all controller nodes
+# Do not add hieradata in this file, and use composable services.
 
 # TODO(emilien) move it to composable aodh roles later
 aodh::api::keystone_tenant: 'service'
