--- a/puppet/hieradata/volume.yaml
+++ b/puppet/hieradata/volume.yaml
@@ -1,3 +1,3 @@
-# Hiera data here applies to all volume storage nodes
+# Do not add hieradata in this file, and use composable services.
 
 volume_classes: []
