--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -58,6 +58,13 @@ outputs:
       config_settings:
         tripleo::profile::base::ceph::ceph_ipv6: {get_param: CephIPv6}
         tripleo::profile::base::ceph::enable_ceph_storage: {get_param: ControllerEnableCephStorage}
+        ceph::profile::params::osd_pool_default_pg_num: 32
+        ceph::profile::params::osd_pool_default_pgp_num: 32
+        ceph::profile::params::osd_pool_default_size: 3
+        ceph::profile::params::osd_pool_default_min_size: 1
+        ceph::profile::params::osds: {/srv/data: {}}
+        ceph::profile::params::manage_repo: false
+        ceph::profile::params::authentication_type: cephx
         ceph::profile::params::fsid: {get_param: CephClusterFSID}
         ceph::profile::params::client_keys:
           str_replace:
